Added copy of info.json file

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,4 +1,6 @@
-FROM nginx:stable-alpine
+FROM nginx:stable
+
+COPY ./info.json /usr/share/nginx/html/
 
 # support running as arbitrary user which belogs to the root group
 RUN chmod g+rwx /var/cache/nginx /var/run /var/log/nginx
